--- a/ghost-theme/post.hbs
+++ b/ghost-theme/post.hbs
@@ -6,7 +6,7 @@
         <header class="post-header">
             <h1 class="post-title">{{title}}</h1>
             <div class="post-meta">
-                <time datetime="{{date format="YYYY-MM-DD"}}">{{date format="MMMM D, YYYY"}}</time>
+                <time datetime="{{date format="YYYY-MM-DD"}}">{{date format="MMMM YYYY"}}</time>
                 {{#primary_tag}}
                     <span class="post-meta-divider">•</span>
                     <span class="post-category">{{name}}</span>
